add get profile to gateway
